--- a/msvc/core.vcxproj
+++ b/msvc/core.vcxproj
@@ -21,7 +21,7 @@
   <ItemGroup>
     <ClCompile Include="..\src\core\parallel.cpp" />
     <ClCompile Include="..\src\core\plugin.c" />
-    <ClCompile Include="..\src\core\rdp.c" />
+    <ClCompile Include="..\src\core\n64video.c" />
     <ClCompile Include="..\src\core\rdp\blender.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
@@ -143,7 +143,7 @@
     <ClInclude Include="..\src\core\msg.h" />
     <ClInclude Include="..\src\core\parallel.h" />
     <ClInclude Include="..\src\core\plugin.h" />
-    <ClInclude Include="..\src\core\rdp.h" />
+    <ClInclude Include="..\src\core\n64video.h" />
     <ClInclude Include="..\src\core\screen.h" />
   </ItemGroup>
   <ItemGroup>
