Moved command function prototypes to rdp.h

--- a/msvc/core.vcxproj
+++ b/msvc/core.vcxproj
@@ -144,6 +144,7 @@
     <ClInclude Include="..\src\core\parallel.h" />
     <ClInclude Include="..\src\core\plugin.h" />
     <ClInclude Include="..\src\core\n64video.h" />
+    <ClInclude Include="..\src\core\rdp.h" />
     <ClInclude Include="..\src\core\screen.h" />
   </ItemGroup>
   <ItemGroup>
