--- a/msvc/core.vcxproj.filters
+++ b/msvc/core.vcxproj.filters
@@ -106,6 +106,9 @@
     <ClInclude Include="..\src\core\n64video.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\core\rdp.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\src\core\version.h.in">
